[package]
name = "main"
version = "0.1.0"
authors = ["Cisco <Aaronvtx@protonmail.ch>"]
edition = "2018"

[dependencies]
dashmap = "4.0.2"
tokio = { version = "1.5.0", features=["rt-multi-thread"] }
serde_json = "1.0.64"

[dependencies.serenity]
version = "0.10.5"
default-features = false
features = [
   "builder",
   "cache",
   "client",
   "gateway",
   "http",
   "model",
   "utils",
   "rustls_backend"
]

[[bin]]
name = "main"
path = "src/jeff.rs"

[lib]
name = "modules"
path = "src/lib/modules.rs"
